# crowdstress-math

./: Cargo.toml  Dockerfile  Rocket.toml
.github/workflows/: qa.yml  release.yml
src/: config.rs  lib.rs  main.rs
src/models/: api.rs  exit.rs  primitives.rs  room.rs  vector.rs  wall.rs
src/utils/: geometry.rs
